--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
     background-color: #ff9100; 
-    background-image: url(imagens/fundo-pizza.png);
+    background-image: url(./Imagens/fundo-pizza.png);
     font-family: 'Permanent Marker', cursive;
 }
 
