--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ header h1 {
 }
 
 header h1 span {
-    color: rgb(173, 6, 20);
+    color: rgb(170, 10, 2);
 }
 
 header p {
@@ -71,6 +71,8 @@ section h2 {
 section ul {
     background: rgba(173, 27, 39, 0.801);
     border-radius: 10px;
+    padding-top: 5px;
+    
 }
 
 
@@ -92,4 +94,9 @@ li .details {
 
 .details h3 {
     margin-bottom: 8px;
+}
+
+.price {
+    margin-left: auto;
+    margin-right: 5px;
 }
