--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: #ff9100; 
+    background-color: #d67e0b; 
     background-image: url(./Imagens/fundo-pizza.png);
     font-family: 'Permanent Marker', cursive;
 }
